@@ -13,18 +13,17 @@
 package org.openhab.core.config.core;
 
 import static org.hamcrest.CoreMatchers.*;
-import static org.hamcrest.core.IsCollectionContaining.hasItems;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.core.IsIterableContaining.hasItems;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 /**
  * Test for Configuration class.
@@ -62,7 +61,7 @@ public class ConfigurationTest {
         configuration.put("booleanField", false);
         configuration.put("stringField", "test");
         configuration.put("enumField", "ON");
-        configuration.put("listField", Arrays.asList("one", "two", "three"));
+        configuration.put("listField", List.of("one", "two", "three"));
         configuration.put("notExisitingProperty", true);
 
         ConfigClass configClass = configuration.as(ConfigClass.class);
