@@ -12,29 +12,33 @@
  */
 package org.openhab.core.thing.internal;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
-import static org.mockito.MockitoAnnotations.initMocks;
 
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.openhab.core.events.Event;
 import org.openhab.core.events.EventPublisher;
 import org.openhab.core.items.GenericItem;
+import org.openhab.core.items.GroupItem;
 import org.openhab.core.items.MetadataRegistry;
 import org.openhab.core.items.events.ItemCommandEvent;
 import org.openhab.core.items.events.ItemEventFactory;
 import org.openhab.core.items.events.ItemStateEvent;
 import org.openhab.core.items.events.ItemStatePredictedEvent;
+import org.openhab.core.library.CoreItemFactory;
 import org.openhab.core.library.items.StringItem;
 import org.openhab.core.library.types.StringType;
 import org.openhab.core.thing.ChannelUID;
@@ -54,8 +58,11 @@ import org.openhab.core.thing.type.ChannelTypeRegistry;
  * @author Simon Kaufmann - Initial contribution
  * @author Kai Kreuzer - added tests with multiple links
  */
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.WARN)
 public class AutoUpdateManagerTest {
 
+    private static final String ITEM_NAME = "test";
     private static final ThingUID THING_UID_ONLINE = new ThingUID("test::mock-online");
     private static final ThingUID THING_UID_OFFLINE = new ThingUID("test::mock-offline");
     private static final ThingUID THING_UID_HANDLER_MISSING = new ThingUID("test::handlerMissing");
@@ -66,6 +73,8 @@ public class AutoUpdateManagerTest {
     private static final ChannelUID CHANNEL_UID_HANDLER_MISSING = new ChannelUID(THING_UID_HANDLER_MISSING, "channel1");
     private ItemCommandEvent event;
     private GenericItem item;
+    private ItemCommandEvent groupEvent;
+    private GroupItem groupItem;
 
     private @Mock ChannelTypeRegistry channelTypeRegistryMock;
     private @Mock EventPublisher eventPublisherMock;
@@ -77,19 +86,20 @@ public class AutoUpdateManagerTest {
     private @Mock ThingHandler handlerMock;
     private @Mock MetadataRegistry metadataRegistryMock;
 
-    private final List<ItemChannelLink> links = new LinkedList<>();
+    private final Set<ItemChannelLink> links = new HashSet<>();
     private AutoUpdateManager aum;
     private final Map<ChannelUID, AutoUpdatePolicy> policies = new HashMap<>();
 
-    @Before
+    @BeforeEach
     public void setup() {
-        initMocks(this);
-        event = ItemEventFactory.createCommandEvent("test", new StringType("AFTER"));
-        item = new StringItem("test");
+        event = ItemEventFactory.createCommandEvent(ITEM_NAME, new StringType("AFTER"));
+        item = new StringItem(ITEM_NAME);
         item.setState(new StringType("BEFORE"));
+        groupEvent = ItemEventFactory.createCommandEvent("groupTest", new StringType("AFTER"));
+        groupItem = new GroupItem("groupTest", new StringItem("test"));
+        groupItem.setState(new StringType("BEFORE"));
 
-        when(iclRegistryMock.stream()).then(answer -> links.stream());
-        when(iclRegistryMock.getAll()).then(answer -> links);
+        when(iclRegistryMock.getLinks(eq(ITEM_NAME))).then(answer -> links);
 
         when(thingRegistryMock.get(eq(THING_UID_ONLINE))).thenReturn(onlineThingMock);
         when(thingRegistryMock.get(eq(THING_UID_OFFLINE))).thenReturn(offlineThingMock);
@@ -98,16 +108,16 @@ public class AutoUpdateManagerTest {
         when(onlineThingMock.getHandler()).thenReturn(handlerMock);
         when(onlineThingMock.getStatus()).thenReturn(ThingStatus.ONLINE);
         when(onlineThingMock.getChannel(eq(CHANNEL_UID_ONLINE_1.getId())))
-                .thenAnswer(answer -> ChannelBuilder.create(CHANNEL_UID_ONLINE_1, "String")
+                .thenAnswer(answer -> ChannelBuilder.create(CHANNEL_UID_ONLINE_1, CoreItemFactory.STRING)
                         .withAutoUpdatePolicy(policies.get(CHANNEL_UID_ONLINE_1)).build());
         when(onlineThingMock.getChannel(eq(CHANNEL_UID_ONLINE_2.getId())))
-                .thenAnswer(answer -> ChannelBuilder.create(CHANNEL_UID_ONLINE_2, "String")
+                .thenAnswer(answer -> ChannelBuilder.create(CHANNEL_UID_ONLINE_2, CoreItemFactory.STRING)
                         .withAutoUpdatePolicy(policies.get(CHANNEL_UID_ONLINE_2)).build());
 
         when(offlineThingMock.getHandler()).thenReturn(handlerMock);
         when(offlineThingMock.getStatus()).thenReturn(ThingStatus.OFFLINE);
         when(offlineThingMock.getChannel(eq(CHANNEL_UID_OFFLINE_1.getId())))
-                .thenAnswer(answer -> ChannelBuilder.create(CHANNEL_UID_OFFLINE_1, "String")
+                .thenAnswer(answer -> ChannelBuilder.create(CHANNEL_UID_OFFLINE_1, CoreItemFactory.STRING)
                         .withAutoUpdatePolicy(policies.get(CHANNEL_UID_OFFLINE_1)).build());
 
         aum = new AutoUpdateManager(new HashMap<>(), channelTypeRegistryMock, eventPublisherMock, iclRegistryMock,
@@ -160,7 +170,7 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateNoPolicy() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
 
         aum.receiveCommand(event, item);
 
@@ -169,7 +179,7 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateNoPolicyThingOFFLINE() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_OFFLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_OFFLINE_1));
 
         aum.receiveCommand(event, item);
 
@@ -178,8 +188,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateNoPolicyThingOFFLINEandThingONLINE() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_OFFLINE_1));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_OFFLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
 
         aum.receiveCommand(event, item);
 
@@ -188,8 +198,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateNoPolicyThingONLINEandThingOFFLINE() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_OFFLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_OFFLINE_1));
 
         aum.receiveCommand(event, item);
 
@@ -198,7 +208,7 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateNoPolicyNoHandler() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_HANDLER_MISSING));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_HANDLER_MISSING));
 
         aum.receiveCommand(event, item);
 
@@ -207,7 +217,7 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateNoPolicyNoThing() {
-        links.add(new ItemChannelLink("test", new ChannelUID(new ThingUID("test::missing"), "gone")));
+        links.add(new ItemChannelLink(ITEM_NAME, new ChannelUID(new ThingUID("test::missing"), "gone")));
 
         aum.receiveCommand(event, item);
 
@@ -216,7 +226,7 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateNoPolicyNoChannel() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_GONE));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_GONE));
 
         aum.receiveCommand(event, item);
 
@@ -225,7 +235,7 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdatePolicyVETOThingONLINE() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_1, AutoUpdatePolicy.VETO);
 
         aum.receiveCommand(event, item);
@@ -235,7 +245,7 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdatePolicyRECOMMEND() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_1, AutoUpdatePolicy.RECOMMEND);
 
         aum.receiveCommand(event, item);
@@ -245,8 +255,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdatePolicyVETObeatsDEFAULT() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_2));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_2));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_1, AutoUpdatePolicy.VETO);
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_2, AutoUpdatePolicy.DEFAULT);
 
@@ -257,8 +267,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdatePolicyVETObeatsRECOMMEND() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_2));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_2));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_1, AutoUpdatePolicy.VETO);
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_2, AutoUpdatePolicy.RECOMMEND);
 
@@ -269,8 +279,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdatePolicyDEFAULTbeatsRECOMMEND() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_2));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_2));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_1, AutoUpdatePolicy.DEFAULT);
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_2, AutoUpdatePolicy.RECOMMEND);
 
@@ -281,8 +291,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateErrorInvalidatesVETO() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_GONE));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_GONE));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_1, AutoUpdatePolicy.RECOMMEND);
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_GONE, AutoUpdatePolicy.VETO);
 
@@ -293,8 +303,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateErrorInvalidatesVETO2() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_GONE));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_GONE));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_1, AutoUpdatePolicy.DEFAULT);
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_GONE, AutoUpdatePolicy.VETO);
 
@@ -305,8 +315,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateErrorInvalidatesDEFAULT() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_GONE));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_GONE));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_1, AutoUpdatePolicy.RECOMMEND);
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_GONE, AutoUpdatePolicy.DEFAULT);
 
@@ -317,8 +327,8 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateMultipleErrors() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_GONE));
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_GONE));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_GONE));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_GONE));
         setAutoUpdatePolicy(CHANNEL_UID_ONLINE_GONE, AutoUpdatePolicy.DEFAULT);
 
         aum.receiveCommand(event, item);
@@ -328,7 +338,7 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateDisabled() {
-        aum.modified(Collections.singletonMap(AutoUpdateManager.PROPERTY_ENABLED, "false"));
+        aum.modified(Map.of(AutoUpdateManager.PROPERTY_ENABLED, "false"));
 
         aum.receiveCommand(event, item);
 
@@ -337,12 +347,21 @@ public class AutoUpdateManagerTest {
 
     @Test
     public void testAutoUpdateSendOptimisticUpdates() {
-        links.add(new ItemChannelLink("test", CHANNEL_UID_ONLINE_1));
-        aum.modified(Collections.singletonMap(AutoUpdateManager.PROPERTY_SEND_OPTIMISTIC_UPDATES, "true"));
+        links.add(new ItemChannelLink(ITEM_NAME, CHANNEL_UID_ONLINE_1));
+        aum.modified(Map.of(AutoUpdateManager.PROPERTY_SEND_OPTIMISTIC_UPDATES, "true"));
 
         aum.receiveCommand(event, item);
 
         assertPredictionEvent("AFTER", null);
         assertStateEvent("AFTER", AutoUpdateManager.EVENT_SOURCE_OPTIMISTIC); // no?
+    }
+
+    @Test
+    public void testAutoUpdateDisabledForGroupItems() {
+        groupItem.addMember(item);
+        aum.receiveCommand(groupEvent, groupItem);
+        groupItem.removeMember(item);
+
+        assertNothingHappened();
     }
 }
