@@ -13,20 +13,20 @@
 package org.openhab.core.thing.type;
 
 import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
 
 import java.net.URI;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.openhab.core.thing.ThingTypeUID;
 
 /**
@@ -47,30 +47,31 @@ public class ThingTypeBuilderTest {
 
     private @NonNullByDefault({}) ThingTypeBuilder builder;
 
-    @Before
+    @BeforeEach
     public void setup() {
         // set up a valid basic ThingTypeBuilder
         builder = ThingTypeBuilder.instance(BINDING_ID, THING_TYPE_ID, LABEL);
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void whenThingTypeIdAndBindingIdBlankShouldFail() {
-        ThingTypeBuilder.instance("", "", LABEL).build();
+        assertThrows(IllegalArgumentException.class, () -> ThingTypeBuilder.instance("", "", LABEL).build());
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void whenThingTypeIdBlankShouldFail() {
-        ThingTypeBuilder.instance(BINDING_ID, "", LABEL).build();
+        assertThrows(IllegalArgumentException.class, () -> ThingTypeBuilder.instance(BINDING_ID, "", LABEL).build());
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void whenBindingIdBlankShouldFail() {
-        ThingTypeBuilder.instance("", THING_TYPE_ID, LABEL).build();
+        assertThrows(IllegalArgumentException.class, () -> ThingTypeBuilder.instance("", THING_TYPE_ID, LABEL).build());
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void whenLabelBlankShouldFail() {
-        ThingTypeBuilder.instance(THING_TYPE_ID, BINDING_ID, "").build();
+        assertThrows(IllegalArgumentException.class,
+                () -> ThingTypeBuilder.instance(THING_TYPE_ID, BINDING_ID, "").build());
     }
 
     @Test
@@ -176,9 +177,7 @@ public class ThingTypeBuilderTest {
 
     @Test
     public void withExtensibleChannelTypeIdsShouldSetUnmodifiableExtensibleChannelTypeIds() {
-        ThingType thingType = builder
-                .withExtensibleChannelTypeIds(Arrays.asList(new String[] { "channelTypeId1", "channelTypeId2" }))
-                .build();
+        ThingType thingType = builder.withExtensibleChannelTypeIds(List.of("channelTypeId1", "channelTypeId2")).build();
 
         assertThat(thingType.getExtensibleChannelTypeIds(), is(hasSize(2)));
         try {
@@ -191,8 +190,7 @@ public class ThingTypeBuilderTest {
 
     @Test
     public void withSupportedBridgeTypeUIDsShouldSetUnmodifiableSupportedBridgeTypeUIDs() {
-        ThingType thingType = builder.withSupportedBridgeTypeUIDs(Arrays.asList(new String[] { "bridgeTypeUID1" }))
-                .build();
+        ThingType thingType = builder.withSupportedBridgeTypeUIDs(List.of("bridgeTypeUID1")).build();
 
         assertThat(thingType.getSupportedBridgeTypeUIDs(), is(hasSize(1)));
         try {
