@@ -13,16 +13,15 @@
 package org.openhab.core.internal.service;
 
 import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.Mockito.*;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.openhab.core.library.items.NumberItem;
 import org.openhab.core.types.StateDescription;
 import org.openhab.core.types.StateDescriptionFragment;
@@ -50,7 +49,7 @@ public class StateDescriptionServiceImplTest {
     private StateDescriptionServiceImpl stateDescriptionService;
     private NumberItem item;
 
-    @Before
+    @BeforeEach
     public void setup() {
         stateDescriptionService = new StateDescriptionServiceImpl();
 
@@ -162,7 +161,7 @@ public class StateDescriptionServiceImplTest {
 
     @Test
     public void testFragmentsAreMergedInProviderOrder() {
-        final List<StateOption> options = Arrays.asList(new StateOption("value", "label"));
+        final List<StateOption> options = List.of(new StateOption("value", "label"));
 
         StateDescriptionFragment stateDescriptionFragment1 = StateDescriptionFragmentBuilder.create()
                 .withMinimum(BigDecimal.ZERO) //
