@@ -12,26 +12,23 @@
  */
 package org.openhab.core.automation.internal.module;
 
-import static org.junit.Assert.*;
+import static java.util.Map.entry;
+import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.AbstractMap.SimpleEntry;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 import java.util.Random;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 import org.openhab.core.automation.Condition;
 import org.openhab.core.automation.Rule;
 import org.openhab.core.automation.RuleManager;
@@ -39,6 +36,7 @@ import org.openhab.core.automation.RuleRegistry;
 import org.openhab.core.automation.RuleStatus;
 import org.openhab.core.automation.RuleStatusDetail;
 import org.openhab.core.automation.events.RuleStatusInfoEvent;
+import org.openhab.core.automation.internal.RuleEngineImpl;
 import org.openhab.core.automation.internal.module.handler.CompareConditionHandler;
 import org.openhab.core.automation.type.ModuleTypeRegistry;
 import org.openhab.core.automation.util.ModuleBuilder;
@@ -57,6 +55,7 @@ import org.openhab.core.items.events.ItemCommandEvent;
 import org.openhab.core.items.events.ItemEventFactory;
 import org.openhab.core.library.items.SwitchItem;
 import org.openhab.core.library.types.OnOffType;
+import org.openhab.core.service.ReadyMarker;
 import org.openhab.core.test.java.JavaOSGiTest;
 import org.openhab.core.test.storage.VolatileStorageService;
 import org.openhab.core.types.TypeParser;
@@ -75,7 +74,7 @@ public class RuntimeRuleTest extends JavaOSGiTest {
     private final Logger logger = LoggerFactory.getLogger(RuntimeRuleTest.class);
     private final VolatileStorageService volatileStorageService = new VolatileStorageService();
 
-    @Before
+    @BeforeEach
     public void before() {
         registerService(new ItemProvider() {
             @Override
@@ -88,19 +87,22 @@ public class RuntimeRuleTest extends JavaOSGiTest {
 
             @Override
             public Collection<Item> getAll() {
-                return Arrays.asList(new Item[] { new SwitchItem("myMotionItem"), new SwitchItem("myPresenceItem"),
+                return List.of(new SwitchItem("myMotionItem"), new SwitchItem("myPresenceItem"),
                         new SwitchItem("myLampItem"), new SwitchItem("myMotionItem2"),
                         new SwitchItem("myPresenceItem2"), new SwitchItem("myLampItem2"),
                         new SwitchItem("myMotionItem3"), new SwitchItem("myPresenceItem3"),
                         new SwitchItem("myLampItem3"), new SwitchItem("myMotionItem4"),
-                        new SwitchItem("myPresenceItem4"), new SwitchItem("myLampItem4") });
+                        new SwitchItem("myPresenceItem4"), new SwitchItem("myLampItem4"));
             }
         });
         registerService(volatileStorageService);
+
+        // start rule engine
+        ((RuleEngineImpl) getService(RuleManager.class)).onReadyMarkerAdded(new ReadyMarker("", ""));
     }
 
     @Test
-    @Ignore
+    @Disabled
     public void testPredefinedRule() throws ItemNotFoundException, InterruptedException {
         final EventPublisher eventPublisher = getService(EventPublisher.class);
         final Queue<Event> events = new LinkedList<>();
@@ -114,7 +116,7 @@ public class RuntimeRuleTest extends JavaOSGiTest {
 
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
@@ -128,20 +130,17 @@ public class RuntimeRuleTest extends JavaOSGiTest {
         waitForAssert(() -> {
             assertFalse(events.isEmpty());
             ItemCommandEvent event = (ItemCommandEvent) events.remove();
-            assertEquals("smarthome/items/myLampItem/command", event.getTopic());
+            assertEquals("openhab/items/myLampItem/command", event.getTopic());
             assertEquals(OnOffType.ON, event.getItemCommand());
         });
     }
 
     @Test
     public void itemStateUpdatedBySimpleRule() throws ItemNotFoundException, InterruptedException {
-        final Configuration triggerConfig = new Configuration(Stream
-                .of(new SimpleEntry<>("eventSource", "myMotionItem2"), new SimpleEntry<>("eventTopic", "smarthome/*"),
-                        new SimpleEntry<>("eventTypes", "ItemStateEvent"))
-                .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+        final Configuration triggerConfig = new Configuration(Map.ofEntries(entry("eventSource", "myMotionItem2"),
+                entry("eventTopic", "openhab/*"), entry("eventTypes", "ItemStateEvent")));
         final Configuration actionConfig = new Configuration(
-                Stream.of(new SimpleEntry<>("itemName", "myLampItem2"), new SimpleEntry<>("command", "ON"))
-                        .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+                Map.ofEntries(entry("itemName", "myLampItem2"), entry("command", "ON")));
         final Rule rule = RuleBuilder.create("myRule21" + new Random().nextInt())
                 .withTriggers(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger2")
                         .withTypeUID("core.GenericEventTrigger").withConfiguration(triggerConfig).build())
@@ -157,12 +156,12 @@ public class RuntimeRuleTest extends JavaOSGiTest {
         ruleEngine.setEnabled(rule.getUID(), true);
 
         waitForAssert(() -> {
-            Assert.assertEquals(RuleStatus.IDLE, ruleEngine.getStatusInfo(rule.getUID()).getStatus());
+            assertEquals(RuleStatus.IDLE, ruleEngine.getStatusInfo(rule.getUID()).getStatus());
         });
 
         // Test rule
         final EventPublisher eventPublisher = getService(EventPublisher.class);
-        Assert.assertNotNull(eventPublisher);
+        assertNotNull(eventPublisher);
 
         eventPublisher.post(ItemEventFactory.createStateEvent("myPresenceItem2", OnOffType.ON));
 
@@ -177,7 +176,7 @@ public class RuntimeRuleTest extends JavaOSGiTest {
 
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemCommandEvent.TYPE);
+                return Set.of(ItemCommandEvent.TYPE);
             }
 
             @Override
@@ -191,7 +190,7 @@ public class RuntimeRuleTest extends JavaOSGiTest {
         waitForAssert(() -> {
             assertFalse(events.isEmpty());
             ItemCommandEvent event = (ItemCommandEvent) events.remove();
-            assertEquals("smarthome/items/myLampItem2/command", event.getTopic());
+            assertEquals("openhab/items/myLampItem2/command", event.getTopic());
             assertEquals(OnOffType.ON, event.getItemCommand());
         });
     }
@@ -200,42 +199,37 @@ public class RuntimeRuleTest extends JavaOSGiTest {
     public void modeTypesRegistration() {
         final ModuleTypeRegistry mtr = getService(ModuleTypeRegistry.class);
         waitForAssert(() -> {
-            Assert.assertNotNull(mtr.get("core.GenericEventTrigger"));
-            Assert.assertNotNull(mtr.get("core.GenericEventCondition"));
-            Assert.assertNotNull(mtr.get("core.ItemStateChangeTrigger"));
-            Assert.assertNotNull(mtr.get("core.ItemStateUpdateTrigger"));
-            Assert.assertNotNull(mtr.get(CompareConditionHandler.MODULE_TYPE));
+            assertNotNull(mtr.get("core.GenericEventTrigger"));
+            assertNotNull(mtr.get("core.GenericEventCondition"));
+            assertNotNull(mtr.get("core.ItemStateChangeTrigger"));
+            assertNotNull(mtr.get("core.ItemStateUpdateTrigger"));
+            assertNotNull(mtr.get(CompareConditionHandler.MODULE_TYPE));
         });
     }
 
     private Configuration newRightOperatorConfig(final Object right, final Object operator) {
-        return new Configuration(Stream.of(new SimpleEntry<>("right", right), new SimpleEntry<>("operator", operator))
-                .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+        return new Configuration(Map.of("right", right, "operator", operator));
     }
 
     private Configuration newRightOperatorInputPropertyConfig(final Object right, final Object operator,
             final Object inputProperty) {
-        return new Configuration(Stream
-                .of(new SimpleEntry<>("right", right), new SimpleEntry<>("operator", operator),
-                        new SimpleEntry<>("inputproperty", inputProperty))
-                .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+        return new Configuration(Map.of("right", right, "operator", operator, "inputproperty", inputProperty));
     }
 
     private void assertSatisfiedHandlerInput(final CompareConditionHandler handler, final boolean expected,
             final @Nullable Object input) {
         final boolean is = handler.isSatisfied(Collections.singletonMap("input", input));
         if (expected) {
-            Assert.assertTrue(is);
+            assertTrue(is);
         } else {
-            Assert.assertFalse(is);
+            assertFalse(is);
         }
     }
 
     @Test
     public void compareConditionWorks() {
         final Configuration conditionConfig = newRightOperatorConfig("ON", "=");
-        final Map<String, String> inputs = Stream.of(new SimpleEntry<>("input", "someTrigger.someoutput"))
-                .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue()));
+        final Map<String, String> inputs = Map.of("input", "someTrigger.someoutput");
         Condition condition = ModuleBuilder.createCondition().withId("id").withTypeUID("core.GenericCompareCondition")
                 .withConfiguration(conditionConfig).withInputs(inputs).build();
         CompareConditionHandler handler = new CompareConditionHandler(condition);
@@ -311,8 +305,7 @@ public class RuntimeRuleTest extends JavaOSGiTest {
         assertSatisfiedHandlerInput(handler, false, "something matches?");
         assertSatisfiedHandlerInput(handler, true, "anything matches?");
 
-        Assert.assertFalse(handler.isSatisfied(Stream.of(new SimpleEntry<>("nothing", "nothing"))
-                .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue()))));
+        assertFalse(handler.isSatisfied(Map.of("nothing", "nothing")));
 
         condition = ModuleBuilder.createCondition(condition)
                 .withConfiguration(newRightOperatorConfig("ONOFF", "matches")).build();
@@ -354,11 +347,9 @@ public class RuntimeRuleTest extends JavaOSGiTest {
 
     @Test
     public void ruleTriggeredByCompositeTrigger() throws ItemNotFoundException, InterruptedException {
-        final Configuration triggerConfig = new Configuration(Stream.of(new SimpleEntry<>("itemName", "myMotionItem3"))
-                .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+        final Configuration triggerConfig = new Configuration(Map.of("itemName", "myMotionItem3"));
         final Configuration actionConfig = new Configuration(
-                Stream.of(new SimpleEntry<>("itemName", "myLampItem3"), new SimpleEntry<>("command", "ON"))
-                        .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+                Map.ofEntries(entry("itemName", "myLampItem3"), entry("command", "ON")));
         final Rule rule = RuleBuilder.create("myRule21" + new Random().nextInt() + "_COMPOSITE")
                 .withTriggers(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger3")
                         .withTypeUID("core.ItemStateChangeTrigger").withConfiguration(triggerConfig).build())
@@ -375,7 +366,7 @@ public class RuntimeRuleTest extends JavaOSGiTest {
         // Test rule
 
         waitForAssert(() -> {
-            Assert.assertEquals(RuleStatus.IDLE, ruleEngine.getStatusInfo(rule.getUID()).getStatus());
+            assertEquals(RuleStatus.IDLE, ruleEngine.getStatusInfo(rule.getUID()).getStatus());
         });
 
         final Queue<Event> events = new LinkedList<>();
@@ -389,7 +380,7 @@ public class RuntimeRuleTest extends JavaOSGiTest {
 
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(RuleStatusInfoEvent.TYPE);
+                return Set.of(RuleStatusInfoEvent.TYPE);
             }
 
             @Override
@@ -416,7 +407,7 @@ public class RuntimeRuleTest extends JavaOSGiTest {
     }
 
     @Test
-    @Ignore
+    @Disabled
     public void ruleEnableHandlerWorks() throws ItemNotFoundException {
         final RuleRegistry ruleRegistry = getService(RuleRegistry.class);
         final RuleManager ruleEngine = getService(RuleManager.class);
@@ -430,12 +421,9 @@ public class RuntimeRuleTest extends JavaOSGiTest {
         final String secondRuleAction = "secondRuleAction";
 
         try {
-            final Configuration triggerConfig = new Configuration(
-                    Stream.of(new SimpleEntry<>("itemName", "myMotionItem3"))
-                            .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+            final Configuration triggerConfig = new Configuration(Map.of("itemName", "myMotionItem3"));
             final Configuration actionConfig = new Configuration(
-                    Stream.of(new SimpleEntry<>("enable", false), new SimpleEntry<>("ruleUIDs", firstConfig))
-                            .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+                    Map.ofEntries(entry("enable", false), entry("ruleUIDs", firstConfig)));
 
             final Rule rule = RuleBuilder.create(firstRuleAction)
                     .withTriggers(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger3")
@@ -456,19 +444,14 @@ public class RuntimeRuleTest extends JavaOSGiTest {
                     TypeParser.parseCommand(myMotionItem.getAcceptedCommandTypes(), "ON")));
 
             waitForAssert(() -> {
-                Assert.assertEquals(RuleStatusDetail.DISABLED,
-                        ruleEngine.getStatusInfo(firstRuleUID).getStatusDetail());
-                Assert.assertEquals(RuleStatusDetail.DISABLED,
-                        ruleEngine.getStatusInfo(secondRuleUID).getStatusDetail());
-                Assert.assertEquals(RuleStatus.IDLE, ruleEngine.getStatus(thirdRuleUID));
+                assertEquals(RuleStatusDetail.DISABLED, ruleEngine.getStatusInfo(firstRuleUID).getStatusDetail());
+                assertEquals(RuleStatusDetail.DISABLED, ruleEngine.getStatusInfo(secondRuleUID).getStatusDetail());
+                assertEquals(RuleStatus.IDLE, ruleEngine.getStatus(thirdRuleUID));
             });
 
-            final Configuration triggerConfig2 = new Configuration(
-                    Stream.of(new SimpleEntry<>("itemName", "myMotionItem3"))
-                            .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+            final Configuration triggerConfig2 = new Configuration(Map.of("itemName", "myMotionItem3"));
             final Configuration actionConfig2 = new Configuration(
-                    Stream.of(new SimpleEntry<>("enable", true), new SimpleEntry<>("ruleUIDs", secondConfig))
-                            .collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue())));
+                    Map.ofEntries(entry("enable", true), entry("ruleUIDs", secondConfig)));
 
             final Rule rule2 = RuleBuilder.create(secondRuleAction)
                     .withTriggers(ModuleBuilder.createTrigger().withId("ItemStateChangeTrigger3")
@@ -482,10 +465,9 @@ public class RuntimeRuleTest extends JavaOSGiTest {
                     TypeParser.parseCommand(myMotionItem.getAcceptedCommandTypes(), "OFF")));
 
             waitForAssert(() -> {
-                Assert.assertEquals(RuleStatus.IDLE, ruleEngine.getStatus(firstRuleUID));
-                Assert.assertEquals(RuleStatusDetail.DISABLED,
-                        ruleEngine.getStatusInfo(secondRuleUID).getStatusDetail());
-                Assert.assertEquals(RuleStatus.IDLE, ruleEngine.getStatus(thirdRuleUID));
+                assertEquals(RuleStatus.IDLE, ruleEngine.getStatus(firstRuleUID));
+                assertEquals(RuleStatusDetail.DISABLED, ruleEngine.getStatusInfo(secondRuleUID).getStatusDetail());
+                assertEquals(RuleStatus.IDLE, ruleEngine.getStatus(thirdRuleUID));
             });
         } finally {
             ruleRegistry.remove(firstRuleUID);
