@@ -13,7 +13,7 @@
 package org.openhab.core.config.dispatch.internal;
 
 import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 
 import java.io.File;
 import java.io.IOException;
@@ -26,22 +26,20 @@ import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.FileTime;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.FixMethodOrder;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import org.junit.runners.MethodSorters;
-import org.openhab.core.config.core.ConfigConstants;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.MethodOrderer.Alphanumeric;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestMethodOrder;
+import org.junit.jupiter.api.io.TempDir;
+import org.openhab.core.OpenHAB;
 import org.openhab.core.test.java.JavaOSGiTest;
 import org.osgi.framework.InvalidSyntaxException;
 import org.osgi.service.cm.Configuration;
@@ -50,11 +48,10 @@ import org.osgi.service.cm.ConfigurationAdmin;
 /**
  * @author Petar Valchev - Initial contribution
  */
-@FixMethodOrder(MethodSorters.NAME_ASCENDING)
+@TestMethodOrder(Alphanumeric.class)
 public class ConfigDispatcherOSGiTest extends JavaOSGiTest {
 
-    @Rule
-    public TemporaryFolder tmpBaseFolder = new TemporaryFolder();
+    public @TempDir File tmpBaseFolder;
 
     private ConfigurationAdmin configAdmin;
 
@@ -68,15 +65,15 @@ public class ConfigDispatcherOSGiTest extends JavaOSGiTest {
     private Configuration configuration;
     private static String configBaseDirectory;
 
-    @BeforeClass
+    @BeforeAll
     public static void setUpClass() {
         // Store the default values in order to restore them after all the tests are finished.
         defaultConfigFile = System.getProperty(ConfigDispatcher.SERVICECFG_PROG_ARGUMENT);
     }
 
-    @Before
+    @BeforeEach
     public void setUp() throws IOException {
-        configBaseDirectory = tmpBaseFolder.getRoot().getAbsolutePath();
+        configBaseDirectory = tmpBaseFolder.getAbsolutePath();
         final Path source = Paths.get(CONFIGURATION_BASE_DIR);
         Files.walkFileTree(source, new CopyDirectoryRecursive(source, Paths.get(configBaseDirectory)));
 
@@ -114,7 +111,7 @@ public class ConfigDispatcherOSGiTest extends JavaOSGiTest {
         }
     }
 
-    @After
+    @AfterEach
     public void tearDown() throws Exception {
         // Clear the configuration with the current pid from the persistent store.
         if (configuration != null) {
@@ -122,7 +119,7 @@ public class ConfigDispatcherOSGiTest extends JavaOSGiTest {
         }
     }
 
-    @AfterClass
+    @AfterAll
     public static void tearDownClass() {
         // Set the system properties to their initial values.
         setSystemProperty(ConfigDispatcher.SERVICECFG_PROG_ARGUMENT, defaultConfigFile);
@@ -181,29 +178,27 @@ public class ConfigDispatcherOSGiTest extends JavaOSGiTest {
         /*
          * Assert that the configuration is updated with a list containing one value for a file in the root directory.
          */
-        verifyValuesOfConfigurationProperty("local.default.pid", "default.property", 1,
-                Collections.singletonList("default.value"));
+        verifyValuesOfConfigurationProperty("local.default.pid", "default.property", 1, List.of("default.value"));
 
         /*
          * Assert that the configuration is updated with a list containing one value for a file in the services
          * directory.
          */
-        verifyValuesOfConfigurationProperty("local.service.first.pid", "service.property", 1,
-                Collections.singletonList("service.value"));
+        verifyValuesOfConfigurationProperty("local.service.first.pid", "service.property", 1, List.of("service.value"));
 
         /*
          * Assert that the configuration is updated with a list containing more than one values for a file in the
          * services directory.
          */
         verifyValuesOfConfigurationProperty("local.service.second.pid", "service.property", 3,
-                Arrays.asList("first value", "second value", "third value"));
+                List.of("first value", "second value", "third value"));
 
         /*
          * Assert that the configuration is updated with a list containing trimmed values for a file in the
          * services directory.
          */
         verifyValuesOfConfigurationProperty("local.service.third.pid", "service.property", 3,
-                Arrays.asList("first value", "second value", "third value"));
+                List.of("first value", "second value", "third value"));
 
         /*
          * Assert that the configuration is updated with an empty list for a file in the services directory.
@@ -936,16 +931,16 @@ public class ConfigDispatcherOSGiTest extends JavaOSGiTest {
     private Configuration getConfigurationWithContext(String pidWithContext) {
         String pid = null;
         String configContext = null;
-        if (pidWithContext.contains(ConfigConstants.SERVICE_CONTEXT_MARKER)) {
-            pid = pidWithContext.split(ConfigConstants.SERVICE_CONTEXT_MARKER)[0];
-            configContext = pidWithContext.split(ConfigConstants.SERVICE_CONTEXT_MARKER)[1];
+        if (pidWithContext.contains(OpenHAB.SERVICE_CONTEXT_MARKER)) {
+            pid = pidWithContext.split(OpenHAB.SERVICE_CONTEXT_MARKER)[0];
+            configContext = pidWithContext.split(OpenHAB.SERVICE_CONTEXT_MARKER)[1];
         } else {
             throw new IllegalArgumentException("PID does not have a context");
         }
         Configuration[] configs = null;
         try {
-            configs = configAdmin.listConfigurations("(&(service.factoryPid=" + pid + ")("
-                    + ConfigConstants.SERVICE_CONTEXT + "=" + configContext + "))");
+            configs = configAdmin.listConfigurations(
+                    "(&(service.factoryPid=" + pid + ")(" + OpenHAB.SERVICE_CONTEXT + "=" + configContext + "))");
         } catch (IOException e) {
             throw new IllegalArgumentException(
                     "IOException occured while retrieving configuration for pid " + pidWithContext, e);
