@@ -12,16 +12,15 @@
  */
 package org.openhab.core.internal.items;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.Collections;
 import java.util.Set;
 import java.util.concurrent.ConcurrentLinkedQueue;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.openhab.core.events.Event;
 import org.openhab.core.events.EventFilter;
 import org.openhab.core.events.EventPublisher;
@@ -48,7 +47,7 @@ public class ItemUpdaterOSGiTest extends JavaOSGiTest {
     private @NonNullByDefault({}) ItemRegistry itemRegistry;
     private final ConcurrentLinkedQueue<Event> receivedEvents = new ConcurrentLinkedQueue<>();
 
-    @Before
+    @BeforeEach
     public void setUp() {
         registerVolatileStorageService();
         eventPublisher = getService(EventPublisher.class);
@@ -67,7 +66,7 @@ public class ItemUpdaterOSGiTest extends JavaOSGiTest {
 
             @Override
             public Set<String> getSubscribedEventTypes() {
-                return Collections.singleton(ItemStateChangedEvent.TYPE);
+                return Set.of(ItemStateChangedEvent.TYPE);
             }
 
             @Override
