@@ -12,23 +12,21 @@
  */
 package org.openhab.core.thing.binding;
 
+import static java.util.Map.entry;
 import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.openhab.core.config.core.ConfigDescription;
 import org.openhab.core.config.core.ConfigDescriptionBuilder;
 import org.openhab.core.config.core.ConfigDescriptionParameter;
@@ -58,6 +56,7 @@ import org.openhab.core.thing.type.ChannelGroupType;
 import org.openhab.core.thing.type.ChannelGroupTypeProvider;
 import org.openhab.core.thing.type.ChannelGroupTypeUID;
 import org.openhab.core.thing.type.ChannelType;
+import org.openhab.core.thing.type.ChannelTypeBuilder;
 import org.openhab.core.thing.type.ChannelTypeProvider;
 import org.openhab.core.thing.type.ChannelTypeUID;
 import org.openhab.core.thing.type.ThingType;
@@ -115,7 +114,7 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
     private int genericInits = 0;
     private int unregisterHandlerDelay = 0;
 
-    @Before
+    @BeforeEach
     public void setup() throws URISyntaxException {
         registerVolatileStorageService();
         thingRegistry = getService(ThingRegistry.class);
@@ -139,13 +138,13 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
         thingHandlerFactory.activate(componentContext);
         registerService(thingHandlerFactory, ThingHandlerFactory.class.getName());
 
-        Map<String, String> thingTypeGenericProperties = new HashMap<>();
-        thingTypeGenericProperties.put(PROPERTY_ON_GENERIC_THING_TYPE, GENERIC_VALUE);
-        thingTypeGenericProperties.put(PROPERTY_ON_GENERIC_AND_SPECIFIC_THING_TYPE, GENERIC_VALUE);
+        Map<String, String> thingTypeGenericProperties = Map.ofEntries(
+                entry(PROPERTY_ON_GENERIC_THING_TYPE, GENERIC_VALUE),
+                entry(PROPERTY_ON_GENERIC_AND_SPECIFIC_THING_TYPE, GENERIC_VALUE));
 
-        Map<String, String> thingTypeSpecificProperties = new HashMap<>();
-        thingTypeSpecificProperties.put(PROPERTY_ON_SPECIFIC_THING_TYPE, SPECIFIC_VALUE);
-        thingTypeSpecificProperties.put(PROPERTY_ON_GENERIC_AND_SPECIFIC_THING_TYPE, SPECIFIC_VALUE);
+        Map<String, String> thingTypeSpecificProperties = Map.ofEntries(
+                entry(PROPERTY_ON_SPECIFIC_THING_TYPE, SPECIFIC_VALUE),
+                entry(PROPERTY_ON_GENERIC_AND_SPECIFIC_THING_TYPE, SPECIFIC_VALUE));
 
         thingTypeGeneric = registerThingTypeAndConfigDescription(THING_TYPE_GENERIC_UID, thingTypeGenericProperties);
         thingTypeSpecific = registerThingTypeAndConfigDescription(THING_TYPE_SPECIFIC_UID, thingTypeSpecificProperties);
@@ -225,8 +224,7 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
             updateStatus(ThingStatus.ONLINE);
             genericInits++;
             if (selfChanging) {
-                Map<String, Object> properties = new HashMap<>(1);
-                properties.put("providedspecific", "there");
+                Map<String, Object> properties = Map.of("providedspecific", "there");
                 changeThingType(THING_TYPE_SPECIFIC_UID, new Configuration(properties));
             }
         }
@@ -325,8 +323,7 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
         // println "[ChangeThingTypeOSGiTest] ======== assert loading specialized thing type works directly"
 
         StorageService storage = getService(StorageService.class);
-        Map<String, Object> properties = new HashMap<>(1);
-        properties.put("providedspecific", "there");
+        Map<String, Object> properties = Map.of("providedspecific", "there");
         Thing thingToPersist = ThingFactory.createThing(thingTypeSpecific,
                 new ThingUID("testBinding", "persistedThing"), new Configuration(properties), null, null);
         thingToPersist.setProperty("universal", "survives");
@@ -419,15 +416,13 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
                 .withChannelDefinitions(getChannelDefinitions(thingTypeUID))
                 .withConfigDescriptionURI(configDescriptionUri).withProperties(thingTypeProperties).build();
         ConfigDescription configDescription = ConfigDescriptionBuilder.create(configDescriptionUri)
-                .withParameters(
-                        Arrays.asList(
-                                ConfigDescriptionParameterBuilder
-                                        .create("parameter" + thingTypeUID.getId(),
-                                                ConfigDescriptionParameter.Type.TEXT)
-                                        .withRequired(false).withDefault("default" + thingTypeUID.getId()).build(),
-                                ConfigDescriptionParameterBuilder
-                                        .create("provided" + thingTypeUID.getId(), ConfigDescriptionParameter.Type.TEXT)
-                                        .withRequired(false).build()))
+                .withParameters(List.of(
+                        ConfigDescriptionParameterBuilder
+                                .create("parameter" + thingTypeUID.getId(), ConfigDescriptionParameter.Type.TEXT)
+                                .withRequired(false).withDefault("default" + thingTypeUID.getId()).build(),
+                        ConfigDescriptionParameterBuilder
+                                .create("provided" + thingTypeUID.getId(), ConfigDescriptionParameter.Type.TEXT)
+                                .withRequired(false).build()))
                 .build();
 
         thingTypes.put(thingTypeUID, thingType);
@@ -437,15 +432,14 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
     }
 
     private List<ChannelDefinition> getChannelDefinitions(ThingTypeUID thingTypeUID) throws URISyntaxException {
-        List<ChannelDefinition> channelDefinitions = new ArrayList<>();
         ChannelTypeUID channelTypeUID = new ChannelTypeUID("test:" + thingTypeUID.getId());
-        ChannelType channelType = new ChannelType(channelTypeUID, false, "itemType", "channelLabel", "description",
-                "category", new HashSet<>(), null, new URI("scheme", "channelType:" + thingTypeUID.getId(), null));
-
+        ChannelType channelType = ChannelTypeBuilder.state(channelTypeUID, "channelLabel", "itemType")
+                .withDescription("description") //
+                .withCategory("category") //
+                .withConfigDescriptionURI(new URI("scheme", "channelType:" + thingTypeUID.getId(), null)).build();
         channelTypes.put(channelTypeUID, channelType);
 
         ChannelDefinition cd = new ChannelDefinitionBuilder("channel" + thingTypeUID.getId(), channelTypeUID).build();
-        channelDefinitions.add(cd);
-        return channelDefinitions;
+        return List.of(cd);
     }
 }
