@@ -13,21 +13,22 @@
 package org.openhab.core.thing.internal;
 
 import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.*;
-import static org.mockito.MockitoAnnotations.initMocks;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.MockitoAnnotations.openMocks;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.openhab.core.common.registry.ProviderChangeListener;
@@ -73,7 +74,6 @@ import org.openhab.core.types.StateDescriptionFragmentBuilder;
 import org.openhab.core.types.StateOption;
 import org.openhab.core.util.BundleResolver;
 import org.osgi.framework.Bundle;
-import org.osgi.framework.BundleException;
 import org.osgi.framework.FrameworkUtil;
 import org.osgi.service.component.ComponentContext;
 
@@ -88,6 +88,8 @@ public class ChannelCommandDescriptionProviderOSGiTest extends JavaOSGiTest {
     private static final String TEST_BUNDLE_NAME = "thingStatusInfoI18nTest.bundle";
     private static final ChannelTypeUID CHANNEL_TYPE_UID = new ChannelTypeUID("hue:dynamic");
 
+    private @NonNullByDefault({}) AutoCloseable mocksCloseable;
+
     private @Mock @NonNullByDefault({}) ComponentContext componentContextMock;
 
     private @NonNullByDefault({}) ItemRegistry itemRegistry;
@@ -95,9 +97,9 @@ public class ChannelCommandDescriptionProviderOSGiTest extends JavaOSGiTest {
     private @NonNullByDefault({}) Bundle testBundle;
     private @NonNullByDefault({}) ThingStatusInfoI18nLocalizationService thingStatusInfoI18nLocalizationService;
 
-    @Before
-    public void setup() throws Exception {
-        initMocks(this);
+    @BeforeEach
+    public void beforeEach() throws Exception {
+        mocksCloseable = openMocks(this);
 
         Mockito.when(componentContextMock.getBundleContext()).thenReturn(bundleContext);
 
@@ -161,7 +163,7 @@ public class ChannelCommandDescriptionProviderOSGiTest extends JavaOSGiTest {
         channelDefinitions.add(new ChannelDefinitionBuilder("7_1", channelType2.getUID()).build());
         channelDefinitions.add(new ChannelDefinitionBuilder("7_2", channelType3.getUID()).build());
 
-        registerService(new SimpleThingTypeProvider(Collections.singleton(ThingTypeBuilder
+        registerService(new SimpleThingTypeProvider(Set.of(ThingTypeBuilder
                 .instance(new ThingTypeUID("hue:lamp"), "label").withChannelDefinitions(channelDefinitions).build())));
 
         List<Item> items = new ArrayList<>();
@@ -173,8 +175,9 @@ public class ChannelCommandDescriptionProviderOSGiTest extends JavaOSGiTest {
         linkRegistry = getService(ItemChannelLinkRegistry.class);
     }
 
-    @After
-    public void teardown() throws BundleException {
+    @AfterEach
+    public void afterEach() throws Exception {
+        mocksCloseable.close();
         testBundle.uninstall();
         ManagedThingProvider managedThingProvider = getService(ManagedThingProvider.class);
         assertNotNull(managedThingProvider);
@@ -210,7 +213,12 @@ public class ChannelCommandDescriptionProviderOSGiTest extends JavaOSGiTest {
 
         Thing thing = thingRegistry.createThingOfType(new ThingTypeUID("hue:lamp"), new ThingUID("hue:lamp:lamp1"),
                 null, "test thing", new Configuration());
+
         assertNotNull(thing);
+        if (thing == null) {
+            throw new IllegalStateException("thing is null");
+        }
+
         managedThingProvider.add(thing);
         ItemChannelLink link = new ItemChannelLink("TestItem1", getChannel(thing, "1").getUID());
         linkRegistry.add(link);
@@ -220,7 +228,7 @@ public class ChannelCommandDescriptionProviderOSGiTest extends JavaOSGiTest {
         linkRegistry.add(link);
         //
         final Collection<Item> items = itemRegistry.getItems();
-        assertEquals(false, items.isEmpty());
+        assertFalse(items.isEmpty());
 
         Item item = itemRegistry.getItem("TestItem1");
         assertEquals(CoreItemFactory.NUMBER, item.getType());
@@ -278,12 +286,16 @@ public class ChannelCommandDescriptionProviderOSGiTest extends JavaOSGiTest {
         Thing thing = thingRegistry.createThingOfType(new ThingTypeUID("hue:lamp"), new ThingUID("hue:lamp:lamp1"),
                 null, "test thing", new Configuration());
         assertNotNull(thing);
+        if (thing == null) {
+            throw new IllegalStateException("thing is null");
+        }
+
         managedThingProvider.add(thing);
         ItemChannelLink link = new ItemChannelLink("TestItem7_2", getChannel(thing, "7_2").getUID());
         linkRegistry.add(link);
         //
         final Collection<Item> items = itemRegistry.getItems();
-        assertEquals(false, items.isEmpty());
+        assertFalse(items.isEmpty());
 
         Item item = itemRegistry.getItem("TestItem7_2");
 
