@@ -12,12 +12,14 @@
  */
 package org.openhab.core.thing.internal.firmware;
 
+import static java.util.Map.entry;
 import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
-import static org.mockito.MockitoAnnotations.initMocks;
+import static org.mockito.MockitoAnnotations.openMocks;
 import static org.openhab.core.thing.firmware.Constants.*;
 import static org.openhab.core.thing.firmware.FirmwareStatusInfo.*;
 
@@ -25,11 +27,11 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.Hashtable;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -38,11 +40,9 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.stubbing.Answer;
@@ -84,45 +84,27 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
     public static final ProgressStep[] SEQUENCE = new ProgressStep[] { ProgressStep.REBOOTING, ProgressStep.DOWNLOADING,
             ProgressStep.TRANSFERRING, ProgressStep.UPDATING };
 
-    @Rule
-    public ExpectedException thrown = ExpectedException.none();
-
     private Thing thing1;
     private Thing thing2;
     private Thing thing3;
 
     private FirmwareUpdateServiceImpl firmwareUpdateService;
 
-    @Mock
-    private FirmwareRegistry mockFirmwareRegistry;
+    private AutoCloseable mocksCloseable;
 
-    @Mock
-    private FirmwareUpdateHandler handler1;
+    private @Mock FirmwareRegistry mockFirmwareRegistry;
+    private @Mock FirmwareUpdateHandler handler1;
+    private @Mock FirmwareUpdateHandler handler2;
+    private @Mock FirmwareUpdateHandler handler3;
+    private @Mock EventPublisher mockPublisher;
+    private @Mock LocaleProvider mockLocaleProvider;
+    private @Mock TranslationProvider mockTranslationProvider;
+    private @Mock ConfigDescriptionValidator mockConfigDescriptionValidator;
+    private @Mock BundleResolver bundleResolver;
 
-    @Mock
-    private FirmwareUpdateHandler handler2;
-
-    @Mock
-    private FirmwareUpdateHandler handler3;
-
-    @Mock
-    private EventPublisher mockPublisher;
-
-    @Mock
-    private LocaleProvider mockLocaleProvider;
-
-    @Mock
-    private TranslationProvider mockTranslationProvider;
-
-    @Mock
-    private ConfigDescriptionValidator mockConfigDescriptionValidator;
-
-    @Mock
-    private BundleResolver bundleResolver;
-
-    @Before
-    public void setup() {
-        initMocks(this);
+    @BeforeEach
+    public void beforeEach() {
+        mocksCloseable = openMocks(this);
 
         Map<String, String> props1 = new HashMap<>();
         props1.put(Thing.PROPERTY_FIRMWARE_VERSION, V111);
@@ -143,7 +125,11 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         thing3 = ThingBuilder.create(THING_TYPE_UID2, THING3_ID).withProperties(props3).build();
 
         SafeCaller safeCaller = getService(SafeCaller.class);
+
         assertNotNull(safeCaller);
+        if (safeCaller == null) {
+            throw new IllegalStateException("safeCaller is null");
+        }
 
         firmwareUpdateService = new FirmwareUpdateServiceImpl(bundleResolver, mockConfigDescriptionValidator,
                 mockPublisher, mockFirmwareRegistry, mockTranslationProvider, mockLocaleProvider, safeCaller);
@@ -157,6 +143,11 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         initialFirmwareRegistryMocking();
 
         when(bundleResolver.resolveBundle(any())).thenReturn(mock(Bundle.class));
+    }
+
+    @AfterEach
+    public void afterEach() throws Exception {
+        mocksCloseable.close();
     }
 
     private void initialFirmwareRegistryMocking() {
@@ -188,7 +179,7 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         when(mockFirmwareRegistry.getFirmwares(any(Thing.class), any())).then(firmwaresAnswer);
     }
 
-    @After
+    @AfterEach
     public void tearDown() {
         firmwareUpdateService.deactivate();
     }
@@ -239,7 +230,7 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
                     || THING_TYPE_UID1.equals(thing.getThingTypeUID())) {
                 return Collections.emptySet();
             } else {
-                return Collections.singleton(FWALPHA_EN);
+                return Set.of(FWALPHA_EN);
             }
         });
 
@@ -295,7 +286,7 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
                     || THING_TYPE_UID2.equals(thing.getThingTypeUID())) {
                 return Collections.emptySet();
             } else {
-                return Collections.singleton(FW113_EN);
+                return Set.of(FW113_EN);
             }
         });
 
@@ -392,19 +383,20 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         assertThat(isUpdateFinished.get(), is(false));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void cancelFirmwareUpdateNoFirmwareUpdateHandler() {
-        firmwareUpdateService.cancelFirmwareUpdate(new ThingUID("dummy:thing:withoutHandler"));
+        assertThrows(IllegalArgumentException.class,
+                () -> firmwareUpdateService.cancelFirmwareUpdate(new ThingUID("dummy:thing:withoutHandler")));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void cancelFirmwareUpdateThingIdIdNull() {
-        firmwareUpdateService.cancelFirmwareUpdate(giveNull());
+        assertThrows(IllegalArgumentException.class, () -> firmwareUpdateService.cancelFirmwareUpdate(giveNull()));
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void cancelFirmwareUpdateUpdateNotStarted() {
-        firmwareUpdateService.cancelFirmwareUpdate(THING3_UID);
+        assertThrows(IllegalStateException.class, () -> firmwareUpdateService.cancelFirmwareUpdate(THING3_UID));
     }
 
     @Test
@@ -487,19 +479,21 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         assertFirmwareStatusInfoEvent(THING2_UID, eventCaptor.getAllValues().get(1), updateExecutableInfoFw112);
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void testGetFirmwareStatusInfoNull() {
-        firmwareUpdateService.getFirmwareStatusInfo(giveNull());
+        assertThrows(IllegalArgumentException.class, () -> firmwareUpdateService.getFirmwareStatusInfo(giveNull()));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void testGetFirmwareStatusInfoNull2() {
-        firmwareUpdateService.updateFirmware(giveNull(), V009, null);
+        assertThrows(IllegalArgumentException.class,
+                () -> firmwareUpdateService.updateFirmware(giveNull(), V009, null));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void testGetFirmwareStatusInfoNull3() {
-        firmwareUpdateService.updateFirmware(THING1_UID, giveNull(), null);
+        assertThrows(IllegalArgumentException.class,
+                () -> firmwareUpdateService.updateFirmware(THING1_UID, giveNull(), null));
     }
 
     @Test
@@ -509,33 +503,34 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
 
     @Test
     public void testUpdateFirmwareUnknownFirmware() {
-        thrown.expect(IllegalArgumentException.class);
-        thrown.expectMessage(equalTo(String.format("Firmware with version %s for thing with UID %s was not found.",
-                UNKNOWN_FIRMWARE_VERSION, THING1_UID)));
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+                () -> firmwareUpdateService.updateFirmware(THING1_UID, UNKNOWN_FIRMWARE_VERSION, null));
 
-        firmwareUpdateService.updateFirmware(THING1_UID, UNKNOWN_FIRMWARE_VERSION, null);
+        assertThat(exception.getMessage(),
+                is(String.format("Firmware with version %s for thing with UID %s was not found.",
+                        UNKNOWN_FIRMWARE_VERSION, THING1_UID)));
     }
 
     @Test
     public void testUpdateFirmwareNoFirmwareUpdateHandler() {
         Thing thing4 = ThingBuilder.create(THING_TYPE_UID_WITHOUT_FW, THING5_ID).build();
 
-        thrown.expect(IllegalArgumentException.class);
-        thrown.expectMessage(
-                equalTo(String.format("There is no firmware update handler for thing with UID %s.", thing4.getUID())));
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+                () -> firmwareUpdateService.updateFirmware(thing4.getUID(), V009, null));
 
-        firmwareUpdateService.updateFirmware(thing4.getUID(), V009, null);
+        assertThat(exception.getMessage(),
+                is(String.format("There is no firmware update handler for thing with UID %s.", thing4.getUID())));
     }
 
     @Test
     public void testUpdateFirmwareNotExecutable() {
         doReturn(false).when(handler1).isUpdateExecutable();
 
-        thrown.expect(IllegalStateException.class);
-        thrown.expectMessage(
-                equalTo(String.format("The firmware update of thing with UID %s is not executable.", THING1_UID)));
+        IllegalStateException exception = assertThrows(IllegalStateException.class,
+                () -> firmwareUpdateService.updateFirmware(THING1_UID, V112, null));
 
-        firmwareUpdateService.updateFirmware(THING1_UID, V112, null);
+        assertThat(exception.getMessage(),
+                is(String.format("The firmware update of thing with UID %s is not executable.", THING1_UID)));
     }
 
     @Test
@@ -568,11 +563,10 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         final FirmwareStatusInfo updateExecutableInfoFw113 = createUpdateExecutableInfo(thing1.getUID(), V113);
         assertThat(firmwareUpdateService.getFirmwareStatusInfo(THING1_UID), is(updateExecutableInfoFw113));
 
-        thrown.expect(IllegalArgumentException.class);
-        thrown.expectMessage(
-                equalTo(String.format("Firmware %s is not suitable for thing with UID %s.", FW113_EN, THING1_UID)));
-
-        firmwareUpdateService.updateFirmware(THING1_UID, V113, null);
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+                () -> firmwareUpdateService.updateFirmware(THING1_UID, V113, null));
+        assertThat(exception.getMessage(),
+                is(String.format("Firmware %s is not suitable for thing with UID %s.", FW113_EN, THING1_UID)));
     }
 
     @Test
@@ -667,7 +661,7 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         when(mockFirmwareRegistry.getFirmwares(any(Thing.class), any())).thenAnswer(invocation -> {
             Thing thing = (Thing) invocation.getArguments()[0];
             if (THING_TYPE_UID1.equals(thing.getThingTypeUID())) {
-                return Collections.singleton(FWALPHA_RESTRICTED_TO_MODEL2);
+                return Set.of(FWALPHA_RESTRICTED_TO_MODEL2);
             } else {
                 return Collections.emptySet();
             }
@@ -678,11 +672,11 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
 
         thing1.setProperties(props1);
 
-        thrown.expect(IllegalArgumentException.class);
-        thrown.expectMessage(equalTo(
-                String.format("Firmware with version %s for thing with UID %s was not found.", VALPHA, THING1_UID)));
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+                () -> firmwareUpdateService.updateFirmware(THING1_UID, VALPHA, null));
 
-        firmwareUpdateService.updateFirmware(THING1_UID, VALPHA, null);
+        assertThat(exception.getMessage(),
+                is(String.format("Firmware with version %s for thing with UID %s was not found.", VALPHA, THING1_UID)));
     }
 
     @Test
@@ -814,11 +808,11 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         int originalDelay = firmwareUpdateService.getFirmwareStatusInfoJobDelay();
         TimeUnit originalTimeUnit = firmwareUpdateService.getFirmwareStatusInfoJobTimeUnit();
 
-        thrown.expect(IllegalArgumentException.class);
-
-        updateInvalidConfigAndAssert(0, 0, TimeUnit.SECONDS, originalPeriod, originalDelay, originalTimeUnit);
-        updateInvalidConfigAndAssert(1, -1, TimeUnit.SECONDS, originalPeriod, originalDelay, originalTimeUnit);
-        updateInvalidConfigAndAssert(1, 0, TimeUnit.NANOSECONDS, originalPeriod, originalDelay, originalTimeUnit);
+        assertThrows(IllegalArgumentException.class, () -> {
+            updateInvalidConfigAndAssert(0, 0, TimeUnit.SECONDS, originalPeriod, originalDelay, originalTimeUnit);
+            updateInvalidConfigAndAssert(1, -1, TimeUnit.SECONDS, originalPeriod, originalDelay, originalTimeUnit);
+            updateInvalidConfigAndAssert(1, 0, TimeUnit.NANOSECONDS, originalPeriod, originalDelay, originalTimeUnit);
+        });
     }
 
     private volatile AtomicBoolean updateExecutable = new AtomicBoolean(false);
@@ -868,9 +862,9 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
         when(mockFirmwareRegistry.getFirmwares(any(Thing.class))).thenAnswer(invocation -> {
             Thing thing = (Thing) invocation.getArguments()[0];
             if (THING_TYPE_UID3.equals(thing.getThingTypeUID())) {
-                return Collections.singleton(FW120_EN);
+                return Set.of(FW120_EN);
             } else {
-                return Collections.emptySet();
+                return Set.of();
             }
         });
 
@@ -992,10 +986,9 @@ public class FirmwareUpdateServiceTest extends JavaOSGiTest {
     }
 
     private void updateConfig(int period, int delay, TimeUnit timeUnit) throws IOException {
-        Map<String, Object> properties = new Hashtable<>();
-        properties.put(FirmwareUpdateServiceImpl.PERIOD_CONFIG_KEY, period);
-        properties.put(FirmwareUpdateServiceImpl.DELAY_CONFIG_KEY, delay);
-        properties.put(FirmwareUpdateServiceImpl.TIME_UNIT_CONFIG_KEY, timeUnit.name());
+        Map<String, Object> properties = Map.ofEntries(entry(FirmwareUpdateServiceImpl.PERIOD_CONFIG_KEY, period),
+                entry(FirmwareUpdateServiceImpl.DELAY_CONFIG_KEY, delay),
+                entry(FirmwareUpdateServiceImpl.TIME_UNIT_CONFIG_KEY, timeUnit.name()));
         firmwareUpdateService.modified(properties);
     }
 }
